# EUGENe

./: .flake8  .gitignore  .pre-commit-config.yaml  =1.4.3  CHANGELOG  LICENSE  README.md  config.yaml  eugene_env.yml  eugene_spec.txt  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  test_activities.npy  test_rev_ohe_seqs.npy  test_rev_seqs.npy  test_seqs.npy
.devcontainer/: Dockerfile  devcontainer.json
GBM/: Gradient_Boosting_Classification.ipynb
LR/: Logistic_Regression_Classification.ipynb  Logistic_Regression_Evaluation.ipynb
META/: MetaPredictior_Classification.ipynb
NN/: CNN_Classification.ipynb  NN_Classification.ipynb  NN_Evaluation.ipynb  Neural_Network_Classification_old.ipynb  Neural_Network_Interpretation.ipynb  RNN_Classification.ipynb  models.py
RF/: RF_clf_hyperopt.py  Random_Forest_Classification.ipynb  Random_Forest_Evaluation.ipynb  Random_Forest_Interpretation.ipynb
config/: 2021_OLS_Library_Holdout_test_and_predict.yaml  test_2021_OLS_Library_training_config.yaml
data/: README
docs/: _key_contributors.rst  api.md  basic_usage_tutorial.ipynb  conf.py  contributing.md  contributors.md  eugene Developmental Page 93e6d46f569846b490260416a8521e9e.md  faqs.md  index.md  index.rst  installation.md  old_api.md  references.rst  standards.md  tutorials.md  usage-principles.md  use-cases.md
eugene/: MPRADataModule.py  MPRADataset.py  __init__.py  _compat.py  _constants.py  _eugene.py  _settings.py  base_cli.py  conftest.py  dsEUGENE.py  dsEUGENE_hyperopt.py  enhancer_utils.py  load_data.py  monitor.py  otx_enhancer_utils.py  seq_transforms.py  seq_utils.py  transforms.py
gkSVM/: gkSVM.sh  gkSVM_Classification.ipynb  gkSVM_Evaluation.ipynb  gkSVM_Interpretation.ipynb  gkSVM_evaluate.sh  gkSVM_hyperopt.sh  gkSVM_train.sh  lsgkm_eval.py
implement/: implement_hyperopt.ipynb
integrate/: integrate_modisco.ipynb
notebooks/: Logistic_Regression_Classification.ipynb  NN_Classification.ipynb  NN_Evaluation.ipynb  Nucleotide_Importance_Analysis.ipynb  Phrase_Encoding_Prediction_ScikitLearn.ipynb  Phrase_Encoding_Prediction_StatsModels.ipynb  Random_Forest_Classification.ipynb  Random_Forest_Optimization.ipynb  Simple_Results_Analysis.ipynb  gkSVM_Classification.ipynb  gkSVM_Evaluation.ipynb
ref/: sample.meme
refactor/: refactor_fit.ipynb  refactor_interpret.ipynb  refactor_models copy.ipynb  refactor_models.ipynb  refactor_motif.ipynb  test.logo
test/: 0_test_CLAIM_Modules.ipynb  1_test_EUGENE_Modules.ipynb  1_test_EUGENE_Structure.ipynb  2_test_EUGENE_SeqDataLoading.ipynb  3_test_EUGENE_Models.ipynb  4A_test_EUGENE_Training_Notebook.ipynb  4B_test_EUGENE_Training_Configs.ipynb  4_test_EUGENE_DataLoading.ipynb  5_test_EUGENE_Testing_and_Prediction.ipynb  5_test_EUGENE_Training.ipynb  6B_test_EUGENE_Interpretation-PWMs.ipynb  6_test_EUGENE_Interpretation.ipynb  99_test_EUGENE_Utils.ipynb  generate_dummy_data.py  test_CLAIM_Models.ipynb  test_CLAIM_Modules.ipynb  test_DataLoading.py  test_DeepBind.ipynb  test_EUGENE_Hyperopt.ipynb  test_EUGENE_MPRADataLoading.ipynb  test_EUGENE_Prediction.ipynb  test_EUGENE_SeqDataLoading.ipynb  test_EUGENE_Testing.ipynb  test_EUGENE_Training.ipynb  test_EUGENE_Training_Configs.ipynb  test_EUGENE_Training_Notebook.ipynb  test_EUGENE_Utils.ipynb  test_data_generation.py  test_ids.npy  test_labels.npy  test_ohe_rev_seqs.npy  test_ohe_seqs.npy  test_seqs.fa  test_seqs.tsv  unittest_DataLoading.py
tests/: test_dataload.py  test_dataload_io.py  test_dataload_janggu.py  test_dataload_memesuite.py  test_dataloading.py  test_datasets.py  test_evaluate.py  test_interpret_feature_attr.py  test_interpret_filter_viz.py  test_interpret_in_silico.py  test_models.py  test_plot.py  test_predict.py  test_preprocess.py  test_preprocess_dataset.py  test_preprocess_sdata.py  test_preprocess_seq.py  test_preprocessing.py  test_seqdata.py  test_train.py
tutorials/: adding_a_dataset_tutorial.ipynb  adding_a_model_tutorial.ipynb  basic_workflow.py  (+6 more)
(+2166 files in other folders)
