[tool.poetry]
name = "eugene-tools"
packages = [{ include = "eugene"}]
version = "0.1.0"
description = "Elucidating the Utility of Genomic Elements with Neural Nets"
authors = ["adamklie <aklie@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
seqpro = "0.1.1"
seqdata = "0.1.1"
seqexplainer = "0.1.0"
motifdata = "0.1.0"
seqdatasets = "0.1.0"
torch = "^1.12.0"
pytorch-lightning = "^2.0.0"
einops = "0.6.1"
torchinfo = "1.8.0"
scikit-learn = "1.2.0"
dask_ml = "2023.3.24"
tensorboard = "2.11.2"
matplotlib = "^3.6.2"
seaborn = "^0.12.0"
graph-part = "^0.1.2"
Sphinx = {version = "5.1.1", extras = ["docs"]}
myst-parser = {version = "0.18.0", extras = ["docs"]}
sphinxcontrib-apidoc = {version = "0.3.0", extras = ["docs"]}
sphinx-autobuild = {version = "2021.3.14", extras = ["docs"]}
autopep8 = {version = "1.6.0", extras = ["docs"]}
sphinx-autodoc-typehints = {version = "^1.19.2", extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
sphinx-nbexamples = {version = "^0.4.1", extras = ["docs"]}
sphinx-gallery = {version = "^0.11.1", extras = ["docs"]}
nbsphinx = {version = "^0.8.9", extras = ["docs"]}
pandoc = {version = "^2.2", extras = ["docs"]}
black = {version = "^22.3", extras = ["dev"]}
pre-commit = {version = "^2.20", extras = ["dev"]}
pytest = {version = "^7.1.2", extras = ["dev"]}
codecov = {version = "^2.0.8", extras = ["dev"]}
coverage = {version = "^6.5.0", extras = ["dev"]}

[tool.poetry.extras]
docs = ["Sphinx", "myst-parser", "sphinxcontrib-apidoc", "sphinx-autobuild", "autopep8", "sphinx-autodoc-typehints", "sphinx-rtd-theme", "sphinx-nbexamples", "sphinx-gallery", "nbsphinx", "pandoc"]
dev = ["black", "pre-commit", "pytest", "codecov", "coverage"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
