[tool.poetry]
name = "eugene-tools"
packages = [{ include = "eugene"}]
version = "0.1.2"
description = "Elucidating the Utility of Genomic Elements with Neural Nets"
authors = ["adamklie <aklie@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
seqpro = "^0.1.1"
seqdata = "^0.1.1"
seqexplainer = "^0.1.0"
motifdata = "^0.1.0"
seqdatasets = "^0.1.0"
torch = ">=1.12.0"
pytorch-lightning = "^2.0.0"
einops = "0.6.1"
torchinfo = "1.8.0"
scikit-learn = "1.2.0"
dask_ml = "2023.3.24"
tensorboard = "2.11.2"
matplotlib = "^3.6.2"
seaborn = "^0.12.0"
graph-part = "^0.1.2"
Sphinx = {version = "^6.2.1", extras = ["docs"]}
sphinx-autobuild = {version = "2021.3.14", extras = ["docs"]}
sphinx-autodoc-typehints = {version = "^1.21.1", extras = ["docs"]}
sphinxcontrib-apidoc = {version = "^0.3.0", extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.2.2", extras = ["docs"]}
myst-parser = {version = "^2.0.0", extras = ["docs"]}
nbsphinx = {version = "^0.9.2", extras = ["docs"]}
pandoc = {version = "^2.3", extras = ["docs"]}

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-autobuild", "sphinx-autodoc-typehints", "sphinxcontrib-apidoc", "sphinx-rtd-theme", "myst-parser", "nbsphinx", "pandoc"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
